Using Nick Names and sparingly using First Letters.